--- a/DT-AD/resources/Templates/Index.html
+++ b/DT-AD/resources/Templates/Index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html>
 <head>
     <title>Dashboard</title>
-    <!-- Incluimos la librería del escáner QR -->
-    <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
-    <style> index.css
-    </style>
+    <script></script>
+    <style> index.css</style>
 </head>
 <body>
-<div class="dashboard-container">
+<div>
 
-    <div class="welcome">
 
-    </div>
-    <div class="info">
-
-    </div>
-
-    <a th:href="@{/logout}" class="logout-link">Cerrar sesión</a>
 </div>
 
 <script>
